# Codex-exemplo

./: .gitignore  .mcp.json  AGENT_BACKEND_SUMMARY.md  ARQUITETURA-COMPLETA-FASE3.md  CLAUDE.md  COMPETITIVE-INTEL-GUIDE.md  DEPLOYMENT-PRODUCTION.md  Dockerfile  ESCALABILIDADE-60-AGENTES.md  FASE-1-DEPLOYMENT-CHECKLIST.md  FASE-2-3-EXECUTION-COMPLETE.md  FASE-2-COLLECTION-MANIFEST.md  FASE-2-COLLECTION-TRACKER.md  FASE-2-EXECUTION-PLAN.md  FASE-2-QUICK-START.md  FASE-2-RAG-POPULATION-PLAN.md  FASE-2-RAG-TESTING.md  FASE-2-START-HERE.md  FASE-2-STATUS.md  FASE-3-4-5-ROADMAP.md  FASE-3-IMPLEMENTACAO.md  FASE-3-RAG-INDEXING.md  FASE2-EXECUCAO-AGORA.md  FASE2-PROGRESS.md  FASE3-PRONTO-EXECUCAO.md  GLOBAL-CODE-SCRAPING-GUIDE.md  HUNTING-PHASE-REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_CHECKLIST.md  INTEGRATION_GUIDE.md  MANTA-MAESTRO-INTEGRACAO.md  MASTER-ROADMAP.md  OBSCURA-INTEGRATION.md  PRODUCAO-RESUMO-EXECUTIVO.md  PROJECT-STATUS-FINAL.md  RAG-INDEX-MASTER-SPRINT1.md  README-60-AGENTS.md  README.md  SCRIPTS-PHASE3-DETALHADO.md  SHAREPOINT-MAPA.md  (+8 more)
.claude/: maestro-rag-integration.json
.rag-staging/: ene:-Lei-9074-1995.txt.json  por:-Lei-12815-2013.txt.json  san:-Lei-14026-2020.txt.json
academic-ingestor/: EXECUCAO-CLAUDECODE.md  HANDOFF.md  INDICE-KEs.md  MASTER-CATALOG.json  README.md
agent-libraries/: 00-maestro.md  01-claims.md  02-contratual.md  04-imobiliario.md  05-orcamento.md  (+18 more)
mcp/: DEPLOY.md  Dockerfile  README.md  SUPABASE_SETUP.md  __init__.py  auth.py  cors_config.py  logging_config.py  middleware.py  netlify.toml  permissions.py  pyproject.toml  railway.toml  rate_limiting.py  requirements-dev.txt  sandbox.py  server.py  skills.json  supabase_client.py  supabase_migrations.sql
mcp/tests/: __init__.py  test_auth.py  test_e2e_tools.py  test_logging.py  test_middleware.py  test_permissions.py  test_rate_limiting_cors_integration.py  test_supabase_query.py
(+411 files in other folders)
