[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mantabase-mcp-v2"
version = "2.0.0"
description = "MantaBase MCP v2 — code-execution + sandbox + SSA auth"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Manta Associados", email = "dev@mantaassociados.com"}]

dependencies = [
    "fastmcp==0.2.0",
    "pydantic>=2.0.0",
    "supabase>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.0",
    "restricted-python>=6.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py39"
