[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mantabase-mcp-v2"
version = "2.0.0"
description = "MantaBase MCP v2 — code-execution + sandbox + SSA auth"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Manta Associados", email = "dev@mantaassociados.com"}]

dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "RestrictedPython>=6.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
monitoring = [
    "sentry-sdk>=1.30.0",
]
all = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "sentry-sdk>=1.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
